# diplomna

./: .gitignore  Diplomna_v1.1.odt  Presentacia.odp
GroundStation/: Makefile  capturetofile.cpp  capturetofile.h  capturetofile.h.autosave  capturetofile.ui  console.cpp  console.h  crc32.cpp  crc32.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_console.cpp  moc_mainwindow.cpp  moc_settingsdialog.cpp  protocol_parser.cpp  protocol_parser.h  qrc_terminal.cpp  settingsdialog.cpp  terminal  terminal.pro  terminal.pro.user.50982e0  terminal.pro.user.be4b4b1  terminal.pro.user.dda6860  terminal.pro.user.ea08961  terminal.qrc  ui_mainwindow.h  utils.cpp  utils.h
LoRaGateway/: LoRaGateway.ino  images.h  sloeber.ino.cpp
LoRaMicroSAT/: .cproject  .project  LoRaMicroSAT.ino  SerialInt.h  SerialLoRa.cpp  SerialLoRa.h  protocol_parser.cpp  protocol_parser.h  sloeber.ino.cpp  utils.cpp  utils.h
WiFi_Kit_series/esp8266/tests/device/libraries/BSTest/: requirements.txt
protocol/: CMakeLists.txt  IostreamLogger.h  crc32.cpp  crc32.h  main.cpp  protocol.kdev4  protocol_parser.cpp  protocol_parser.h  serial_port.cpp  serial_port.h  utils.cpp  utils.h
protocol/.kdev4/: protocol.kdev4
